crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__const_validation_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: const_validation.cm
============================================================
Source code:
const GLOBAL_CONST = 42;
const UNUSED_CONST = 100; // Should warn: Unused variable 'UNUSED_CONST'

func test() {
    const LOCAL_CONST = GLOBAL_CONST; // OK: GLOBAL_CONST is visible
    const DUPLICATE_CONST = 1;
    const DUPLICATE_CONST = 2; // Should error: duplicate definition of 'DUPLICATE_CONST'

    return LOCAL_CONST;
}

============================================================
Found 4 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'UNUSED_CONST'
   ╭─[ const_validation.cm:2:7 ]
   │
 2 │ const UNUSED_CONST = 100; // Should warn: Unused variable 'UNUSED_CONST'
   │       ──────┬─────  
   │             ╰─────── Unused variable 'UNUSED_CONST'
───╯

--- Diagnostic 2 ---
[1003] Error: Duplicate definition of 'DUPLICATE_CONST'
   ╭─[ const_validation.cm:7:11 ]
   │
 7 │     const DUPLICATE_CONST = 2; // Should error: duplicate definition of 'DUPLICATE_CONST'
   │           ───────┬───────  
   │                  ╰───────── Duplicate definition of 'DUPLICATE_CONST'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'DUPLICATE_CONST'
   ╭─[ const_validation.cm:6:11 ]
   │
 6 │     const DUPLICATE_CONST = 1;
   │           ───────┬───────  
   │                  ╰───────── Unused variable 'DUPLICATE_CONST'
───╯

--- Diagnostic 4 ---
[1002] Warning: Unused variable 'DUPLICATE_CONST'
   ╭─[ const_validation.cm:7:11 ]
   │
 7 │     const DUPLICATE_CONST = 2; // Should error: duplicate definition of 'DUPLICATE_CONST'
   │           ───────┬───────  
   │                  ╰───────── Unused variable 'DUPLICATE_CONST'
───╯
